Slides and adjustments

--- a/code/notebooks/af.ipynb
+++ b/code/notebooks/af.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "id": "dc8b9cd3-10d2-4b50-991c-66e68cdb6217",
    "metadata": {},
    "outputs": [],
@@ -88,12 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 106,
    "id": "3080e8d1-e8d5-44d1-8e6f-cd9e36108572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments = experiments_17 + experiments_18 + experiments_19 + experiments_29 \\\n",
+    "experiments = experiments_10 + experiments_11 + experiments_21 + experiments_22 + experiments_34 \\\n",
+    "+ experiments_17 + experiments_18 + experiments_19 + experiments_29 \\\n",
     "+ experiments_31 + experiments_33 + experiments_37 \\\n",
     "+ experiments_32 + experiments_49 + experiments_51 \\\n",
     "+ experiments_38 + experiments_48 + experiments_50"
@@ -101,29 +102,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "0b62e7ae-c41c-4edb-bbd8-2aff278b842d",
+   "execution_count": 107,
+   "id": "67a93963-09ed-4ef2-8a7c-8dbc65618327",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = experiments_to_df(experiments)"
+    "needed_1 = {\n",
+    "    # 'noise': [12, 14],\n",
+    "    # 'random_seed': [103],\n",
+    "    # 'train_window': [10],\n",
+    "    # 'key_a': [\"default\"],\n",
+    "    'key_w': [\"diverge_05\", \"simple_101\", \"const\"]\n",
+    "}\n",
+    "vital = extract_needed(experiments, needed_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
+   "id": "0b62e7ae-c41c-4edb-bbd8-2aff278b842d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = experiments_to_df(vital)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "id": "4761f71a-0d06-4242-839d-39afe9a9cc7e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(168, 4)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lllr}\n",
+      "\\toprule\n",
+      "alpha_function & mixing_type & weight_function & mean \\\\\n",
+      "\\midrule\n",
+      "1 / (x + 10) & decaying past & 1 / (x^1.01) & 123137 \\\\\n",
+      "1 / (x + 100) & decaying past & 1 / (x^1.01) & 123716 \\\\\n",
+      "1 / (x + 1000) & decaying past & 1 / (x^1.01) & 127161 \\\\\n",
+      "1 / (x + 1) & decaying past & 1 / (x^1.01) & 123067 \\\\\n",
+      "1 / 100 & decaying past & 1 / (x^1.01) & 116459 \\\\\n",
+      "1 / 500 & decaying past & 1 / (x^1.01) & 115820 \\\\\n",
+      "1 / 1000 & decaying past & 1 / (x^1.01) & 120758 \\\\\n",
+      "1 / 5000 & decaying past & 1 / (x^1.01) & 130666 \\\\\n",
+      "1 / 10000 & decaying past & 1 / (x^1.01) & 132826 \\\\\n",
+      "1 / 50000 & decaying past & 1 / (x^1.01) & 134851 \\\\\n",
+      "1 / (x + 1)^0.5 & decaying past & 1 / (x^1.01) & 136055 \\\\\n",
+      "1 / (x + 1)^1.5 & decaying past & 1 / (x^1.01) & 134773 \\\\\n",
+      "1 / (x + 1)^2 & decaying past & 1 / (x^1.01) & 135387 \\\\\n",
+      "1 / ln(x + 1) & decaying past & 1 / (x^1.01) & 283210 \\\\\n",
+      "1 / e^(x/3) & decaying past & 1 / (x^1.01) & 135409 \\\\\n",
+      "1 / (x + 10) & increasing past & 1 / (x^1.01) & 110259 \\\\\n",
+      "1 / (x + 100) & increasing past & 1 / (x^1.01) & 109744 \\\\\n",
+      "1 / (x + 1000) & increasing past & 1 / (x^1.01) & 110754 \\\\\n",
+      "1 / (x + 1) & increasing past & 1 / (x^1.01) & 110438 \\\\\n",
+      "1 / 100 & increasing past & 1 / (x^1.01) & 129874 \\\\\n",
+      "1 / 500 & increasing past & 1 / (x^1.01) & 112134 \\\\\n",
+      "1 / 1000 & increasing past & 1 / (x^1.01) & 109844 \\\\\n",
+      "1 / 5000 & increasing past & 1 / (x^1.01) & 115334 \\\\\n",
+      "1 / 10000 & increasing past & 1 / (x^1.01) & 121016 \\\\\n",
+      "1 / 50000 & increasing past & 1 / (x^1.01) & 130965 \\\\\n",
+      "1 / (x + 1)^0.5 & increasing past & 1 / (x^1.01) & 183749 \\\\\n",
+      "1 / (x + 1)^1.5 & increasing past & 1 / (x^1.01) & 131002 \\\\\n",
+      "1 / (x + 1)^2 & increasing past & 1 / (x^1.01) & 135243 \\\\\n",
+      "1 / ln(x + 1) & increasing past & 1 / (x^1.01) & 400131 \\\\\n",
+      "1 / e^(x/3) & increasing past & 1 / (x^1.01) & 135409 \\\\\n",
+      "1 / (x + 10) & start & 1 / (x^1.01) & 132208 \\\\\n",
+      "1 / (x + 100) & start & 1 / (x^1.01) & 131624 \\\\\n",
+      "1 / (x + 1000) & start & 1 / (x^1.01) & 127165 \\\\\n",
+      "1 / (x + 1) & start & 1 / (x^1.01) & 132268 \\\\\n",
+      "1 / 100 & start & 1 / (x^1.01) & 163117 \\\\\n",
+      "1 / 500 & start & 1 / (x^1.01) & 141386 \\\\\n",
+      "1 / 1000 & start & 1 / (x^1.01) & 135612 \\\\\n",
+      "1 / 5000 & start & 1 / (x^1.01) & 121906 \\\\\n",
+      "1 / 10000 & start & 1 / (x^1.01) & 119358 \\\\\n",
+      "1 / 50000 & start & 1 / (x^1.01) & 125141 \\\\\n",
+      "1 / (x + 1)^0.5 & start & 1 / (x^1.01) & 207099 \\\\\n",
+      "1 / (x + 1)^1.5 & start & 1 / (x^1.01) & 125700 \\\\\n",
+      "1 / (x + 1)^2 & start & 1 / (x^1.01) & 134930 \\\\\n",
+      "1 / ln(x + 1) & start & 1 / (x^1.01) & 418163 \\\\\n",
+      "1 / e^(x/3) & start & 1 / (x^1.01) & 135409 \\\\\n",
+      "1 / (x + 10) & uniform past & 1 / (x^1.01) & 110521 \\\\\n",
+      "1 / (x + 100) & uniform past & 1 / (x^1.01) & 110604 \\\\\n",
+      "1 / (x + 1000) & uniform past & 1 / (x^1.01) & 113448 \\\\\n",
+      "1 / (x + 1) & uniform past & 1 / (x^1.01) & 110570 \\\\\n",
+      "1 / 100 & uniform past & 1 / (x^1.01) & 126580 \\\\\n",
+      "1 / 500 & uniform past & 1 / (x^1.01) & 110553 \\\\\n",
+      "1 / 1000 & uniform past & 1 / (x^1.01) & 109805 \\\\\n",
+      "1 / 5000 & uniform past & 1 / (x^1.01) & 119177 \\\\\n",
+      "1 / 10000 & uniform past & 1 / (x^1.01) & 124694 \\\\\n",
+      "1 / 50000 & uniform past & 1 / (x^1.01) & 132478 \\\\\n",
+      "1 / (x + 1)^0.5 & uniform past & 1 / (x^1.01) & 175611 \\\\\n",
+      "1 / (x + 1)^1.5 & uniform past & 1 / (x^1.01) & 132418 \\\\\n",
+      "1 / (x + 1)^2 & uniform past & 1 / (x^1.01) & 135301 \\\\\n",
+      "1 / ln(x + 1) & uniform past & 1 / (x^1.01) & 390906 \\\\\n",
+      "1 / e^(x/3) & uniform past & 1 / (x^1.01) & 135409 \\\\\n",
+      "1 / (x + 10) & decaying past & 1 / c & 128146 \\\\\n",
+      "1 / (x + 100) & decaying past & 1 / c & 128429 \\\\\n",
+      "1 / (x + 1000) & decaying past & 1 / c & 129996 \\\\\n",
+      "1 / (x + 1) & decaying past & 1 / c & 128115 \\\\\n",
+      "1 / 100 & decaying past & 1 / c & 121009 \\\\\n",
+      "1 / 500 & decaying past & 1 / c & 124078 \\\\\n",
+      "1 / 1000 & decaying past & 1 / c & 127208 \\\\\n",
+      "1 / 5000 & decaying past & 1 / c & 131337 \\\\\n",
+      "1 / 10000 & decaying past & 1 / c & 132022 \\\\\n",
+      "1 / 50000 & decaying past & 1 / c & 132609 \\\\\n",
+      "1 / (x + 1)^0.5 & decaying past & 1 / c & 131509 \\\\\n",
+      "1 / (x + 1)^1.5 & decaying past & 1 / c & 132551 \\\\\n",
+      "1 / (x + 1)^2 & decaying past & 1 / c & 132753 \\\\\n",
+      "1 / ln(x + 1) & decaying past & 1 / c & 236402 \\\\\n",
+      "1 / e^(x/3) & decaying past & 1 / c & 132761 \\\\\n",
+      "1 / (x + 10) & increasing past & 1 / c & 117299 \\\\\n",
+      "1 / (x + 100) & increasing past & 1 / c & 117835 \\\\\n",
+      "1 / (x + 1000) & increasing past & 1 / c & 121522 \\\\\n",
+      "1 / (x + 1) & increasing past & 1 / c & 117242 \\\\\n",
+      "1 / 100 & increasing past & 1 / c & 120981 \\\\\n",
+      "1 / 500 & increasing past & 1 / c & 112210 \\\\\n",
+      "1 / 1000 & increasing past & 1 / c & 115281 \\\\\n",
+      "1 / 5000 & increasing past & 1 / c & 125928 \\\\\n",
+      "1 / 10000 & increasing past & 1 / c & 128881 \\\\\n",
+      "1 / 50000 & increasing past & 1 / c & 131885 \\\\\n",
+      "1 / (x + 1)^0.5 & increasing past & 1 / c & 145260 \\\\\n",
+      "1 / (x + 1)^1.5 & increasing past & 1 / c & 131691 \\\\\n",
+      "1 / (x + 1)^2 & increasing past & 1 / c & 132722 \\\\\n",
+      "1 / ln(x + 1) & increasing past & 1 / c & 312109 \\\\\n",
+      "1 / e^(x/3) & increasing past & 1 / c & 132761 \\\\\n",
+      "1 / (x + 10) & start & 1 / c & 114051 \\\\\n",
+      "1 / (x + 100) & start & 1 / c & 114569 \\\\\n",
+      "1 / (x + 1000) & start & 1 / c & 118513 \\\\\n",
+      "1 / (x + 1) & start & 1 / c & 113998 \\\\\n",
+      "1 / 100 & start & 1 / c & 117522 \\\\\n",
+      "1 / 500 & start & 1 / c & 108969 \\\\\n",
+      "1 / 1000 & start & 1 / c & 111710 \\\\\n",
+      "1 / 5000 & start & 1 / c & 123742 \\\\\n",
+      "1 / 10000 & start & 1 / c & 127511 \\\\\n",
+      "1 / 50000 & start & 1 / c & 131542 \\\\\n",
+      "1 / (x + 1)^0.5 & start & 1 / c & 141554 \\\\\n",
+      "1 / (x + 1)^1.5 & start & 1 / c & 131330 \\\\\n",
+      "1 / (x + 1)^2 & start & 1 / c & 132709 \\\\\n",
+      "1 / ln(x + 1) & start & 1 / c & 309672 \\\\\n",
+      "1 / e^(x/3) & start & 1 / c & 132761 \\\\\n",
+      "1 / (x + 10) & uniform past & 1 / c & 119758 \\\\\n",
+      "1 / (x + 100) & uniform past & 1 / c & 120269 \\\\\n",
+      "1 / (x + 1000) & uniform past & 1 / c & 123630 \\\\\n",
+      "1 / (x + 1) & uniform past & 1 / c & 119704 \\\\\n",
+      "1 / 100 & uniform past & 1 / c & 122194 \\\\\n",
+      "1 / 500 & uniform past & 1 / c & 114377 \\\\\n",
+      "1 / 1000 & uniform past & 1 / c & 117809 \\\\\n",
+      "1 / 5000 & uniform past & 1 / c & 127377 \\\\\n",
+      "1 / 10000 & uniform past & 1 / c & 129766 \\\\\n",
+      "1 / 50000 & uniform past & 1 / c & 132100 \\\\\n",
+      "1 / (x + 1)^0.5 & uniform past & 1 / c & 146286 \\\\\n",
+      "1 / (x + 1)^1.5 & uniform past & 1 / c & 131940 \\\\\n",
+      "1 / (x + 1)^2 & uniform past & 1 / c & 132731 \\\\\n",
+      "1 / ln(x + 1) & uniform past & 1 / c & 309570 \\\\\n",
+      "1 / e^(x/3) & uniform past & 1 / c & 132761 \\\\\n",
+      "1 / (x + 10) & decaying past & 1 / (x^0.5) & 126238 \\\\\n",
+      "1 / (x + 100) & decaying past & 1 / (x^0.5) & 126653 \\\\\n",
+      "1 / (x + 1000) & decaying past & 1 / (x^0.5) & 129057 \\\\\n",
+      "1 / (x + 1) & decaying past & 1 / (x^0.5) & 126192 \\\\\n",
+      "1 / 100 & decaying past & 1 / (x^0.5) & 119147 \\\\\n",
+      "1 / 500 & decaying past & 1 / (x^0.5) & 120327 \\\\\n",
+      "1 / 1000 & decaying past & 1 / (x^0.5) & 124500 \\\\\n",
+      "1 / 5000 & decaying past & 1 / (x^0.5) & 131268 \\\\\n",
+      "1 / 10000 & decaying past & 1 / (x^0.5) & 132555 \\\\\n",
+      "1 / 50000 & decaying past & 1 / (x^0.5) & 133705 \\\\\n",
+      "1 / (x + 1)^0.5 & decaying past & 1 / (x^0.5) & 132880 \\\\\n",
+      "1 / (x + 1)^1.5 & decaying past & 1 / (x^0.5) & 133653 \\\\\n",
+      "1 / (x + 1)^2 & decaying past & 1 / (x^0.5) & 134000 \\\\\n",
+      "1 / ln(x + 1) & decaying past & 1 / (x^0.5) & 252793 \\\\\n",
+      "1 / e^(x/3) & decaying past & 1 / (x^0.5) & 134012 \\\\\n",
+      "1 / (x + 10) & increasing past & 1 / (x^0.5) & 111266 \\\\\n",
+      "1 / (x + 100) & increasing past & 1 / (x^0.5) & 111719 \\\\\n",
+      "1 / (x + 1000) & increasing past & 1 / (x^0.5) & 115362 \\\\\n",
+      "1 / (x + 1) & increasing past & 1 / (x^0.5) & 111221 \\\\\n",
+      "1 / 100 & increasing past & 1 / (x^0.5) & 125704 \\\\\n",
+      "1 / 500 & increasing past & 1 / (x^0.5) & 110618 \\\\\n",
+      "1 / 1000 & increasing past & 1 / (x^0.5) & 110794 \\\\\n",
+      "1 / 5000 & increasing past & 1 / (x^0.5) & 121027 \\\\\n",
+      "1 / 10000 & increasing past & 1 / (x^0.5) & 125808 \\\\\n",
+      "1 / 50000 & increasing past & 1 / (x^0.5) & 131895 \\\\\n",
+      "1 / (x + 1)^0.5 & increasing past & 1 / (x^0.5) & 160168 \\\\\n",
+      "1 / (x + 1)^1.5 & increasing past & 1 / (x^0.5) & 131850 \\\\\n",
+      "1 / (x + 1)^2 & increasing past & 1 / (x^0.5) & 133936 \\\\\n",
+      "1 / ln(x + 1) & increasing past & 1 / (x^0.5) & 337777 \\\\\n",
+      "1 / e^(x/3) & increasing past & 1 / (x^0.5) & 134012 \\\\\n",
+      "1 / (x + 10) & start & 1 / (x^0.5) & 108639 \\\\\n",
+      "1 / (x + 100) & start & 1 / (x^0.5) & 108733 \\\\\n",
+      "1 / (x + 1000) & start & 1 / (x^0.5) & 110389 \\\\\n",
+      "1 / (x + 1) & start & 1 / (x^0.5) & 108631 \\\\\n",
+      "1 / 100 & start & 1 / (x^0.5) & 129036 \\\\\n",
+      "1 / 500 & start & 1 / (x^0.5) & 111707 \\\\\n",
+      "1 / 1000 & start & 1 / (x^0.5) & 109449 \\\\\n",
+      "1 / 5000 & start & 1 / (x^0.5) & 115147 \\\\\n",
+      "1 / 10000 & start & 1 / (x^0.5) & 120635 \\\\\n",
+      "1 / 50000 & start & 1 / (x^0.5) & 129963 \\\\\n",
+      "1 / (x + 1)^0.5 & start & 1 / (x^0.5) & 164079 \\\\\n",
+      "1 / (x + 1)^1.5 & start & 1 / (x^0.5) & 130186 \\\\\n",
+      "1 / (x + 1)^2 & start & 1 / (x^0.5) & 133876 \\\\\n",
+      "1 / ln(x + 1) & start & 1 / (x^0.5) & 340332 \\\\\n",
+      "1 / e^(x/3) & start & 1 / (x^0.5) & 134012 \\\\\n",
+      "1 / (x + 10) & uniform past & 1 / (x^0.5) & 114212 \\\\\n",
+      "1 / (x + 100) & uniform past & 1 / (x^0.5) & 114760 \\\\\n",
+      "1 / (x + 1000) & uniform past & 1 / (x^0.5) & 118679 \\\\\n",
+      "1 / (x + 1) & uniform past & 1 / (x^0.5) & 114154 \\\\\n",
+      "1 / 100 & uniform past & 1 / (x^0.5) & 125444 \\\\\n",
+      "1 / 500 & uniform past & 1 / (x^0.5) & 111701 \\\\\n",
+      "1 / 1000 & uniform past & 1 / (x^0.5) & 113087 \\\\\n",
+      "1 / 5000 & uniform past & 1 / (x^0.5) & 123913 \\\\\n",
+      "1 / 10000 & uniform past & 1 / (x^0.5) & 127919 \\\\\n",
+      "1 / 50000 & uniform past & 1 / (x^0.5) & 132531 \\\\\n",
+      "1 / (x + 1)^0.5 & uniform past & 1 / (x^0.5) & 157818 \\\\\n",
+      "1 / (x + 1)^1.5 & uniform past & 1 / (x^0.5) & 132463 \\\\\n",
+      "1 / (x + 1)^2 & uniform past & 1 / (x^0.5) & 133958 \\\\\n",
+      "1 / ln(x + 1) & uniform past & 1 / (x^0.5) & 333528 \\\\\n",
+      "1 / e^(x/3) & uniform past & 1 / (x^0.5) & 134012 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -132,10 +333,10 @@
     "table = df[(df[\"train_window\"] == 10) & mt_mask]\n",
     "# print(table[[\"weight_function\", \"mixing_type\", \"mean\"]].to_latex(float_format=\"%.2f\", index=False))\n",
     "short = table[[\"alpha_function\", \"mixing_type\", \"weight_function\", \"mean\"]]\n",
-    "# short\n",
+    "short\n",
     "# print(short.to_latex(formatters= {\"mean\": lambda x: round(x / 10000, 2)}, index=False))\n",
-    "# print(short.to_latex(float_format=\"%.2f\", index=False))\n",
-    "# short.shape"
+    "print(short.to_latex(float_format=\"%.0f\", index=False))\n",
+    "# short[short[\"alpha_function\"] == alpha_hypers[\"default\"].repr]"
    ]
   },
   {
