--- a/code/notebooks/gm.ipynb
+++ b/code/notebooks/gm.ipynb
@@ -359,8 +359,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0d234879-de28-40f9-869f-e6264c38cc84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiments = experiments_25 + experiments_22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a0155fae-b152-4763-89c9-d085a4cfe035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "needed_1 = {\n",
+    "    # 'noise': [12, 14],\n",
+    "    # 'random_seed': [103],\n",
+    "    'train_window': [10],\n",
+    "    # 'key_a': [\"default\"],\n",
+    "    'key_w': [\"diverge_05\", \"simple_101\", \"const\"]\n",
+    "}\n",
+    "vital = extract_needed(experiments, needed_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ac28388f-3d01-4310-ab76-aac8a62c6ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>noise_var</th>\n",
+       "      <th>train_window</th>\n",
+       "      <th>weight_function</th>\n",
+       "      <th>mixing_type</th>\n",
+       "      <th>alpha_function</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>random_0</th>\n",
+       "      <th>random_1</th>\n",
+       "      <th>random_2</th>\n",
+       "      <th>random_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^1.01)</td>\n",
+       "      <td>decaying past</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>123066.72</td>\n",
+       "      <td>107134.89</td>\n",
+       "      <td>100184.69</td>\n",
+       "      <td>148414.86</td>\n",
+       "      <td>136532.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^1.01)</td>\n",
+       "      <td>decaying past-0.1</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>110839.45</td>\n",
+       "      <td>96141.55</td>\n",
+       "      <td>92622.33</td>\n",
+       "      <td>134327.77</td>\n",
+       "      <td>120266.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^1.01)</td>\n",
+       "      <td>decaying past-0.2</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>111215.36</td>\n",
+       "      <td>96431.58</td>\n",
+       "      <td>92949.05</td>\n",
+       "      <td>134625.43</td>\n",
+       "      <td>120855.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^1.01)</td>\n",
+       "      <td>decaying past-0.5</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>113349.02</td>\n",
+       "      <td>98236.3</td>\n",
+       "      <td>94511.07</td>\n",
+       "      <td>136772.66</td>\n",
+       "      <td>123876.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / c</td>\n",
+       "      <td>decaying past</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>128114.78</td>\n",
+       "      <td>111494.88</td>\n",
+       "      <td>102224.75</td>\n",
+       "      <td>154495.88</td>\n",
+       "      <td>144243.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / c</td>\n",
+       "      <td>decaying past-0.1</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>120146.80</td>\n",
+       "      <td>103720.59</td>\n",
+       "      <td>99041.25</td>\n",
+       "      <td>142517.35</td>\n",
+       "      <td>135308.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / c</td>\n",
+       "      <td>decaying past-0.2</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>120655.39</td>\n",
+       "      <td>104187.64</td>\n",
+       "      <td>99309.86</td>\n",
+       "      <td>143233.36</td>\n",
+       "      <td>135890.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / c</td>\n",
+       "      <td>decaying past-0.5</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>122703.88</td>\n",
+       "      <td>106107.26</td>\n",
+       "      <td>100283.63</td>\n",
+       "      <td>146199.7</td>\n",
+       "      <td>138224.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^0.5)</td>\n",
+       "      <td>decaying past</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>126191.99</td>\n",
+       "      <td>109889.25</td>\n",
+       "      <td>101789.98</td>\n",
+       "      <td>151996.01</td>\n",
+       "      <td>141092.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^0.5)</td>\n",
+       "      <td>decaying past-0.1</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>114707.74</td>\n",
+       "      <td>98998.93</td>\n",
+       "      <td>96210.92</td>\n",
+       "      <td>136923.09</td>\n",
+       "      <td>126698.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^0.5)</td>\n",
+       "      <td>decaying past-0.2</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>115353.63</td>\n",
+       "      <td>99593.39</td>\n",
+       "      <td>96595.65</td>\n",
+       "      <td>137697.77</td>\n",
+       "      <td>127527.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / (x^0.5)</td>\n",
+       "      <td>decaying past-0.5</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>118068.83</td>\n",
+       "      <td>102118.82</td>\n",
+       "      <td>98095.79</td>\n",
+       "      <td>141090.8</td>\n",
+       "      <td>130969.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   noise_var train_window weight_function        mixing_type alpha_function  \\\n",
+       "11         1           10    1 / (x^1.01)      decaying past    1 / (x + 1)   \n",
+       "3          1           10    1 / (x^1.01)  decaying past-0.1    1 / (x + 1)   \n",
+       "8          1           10    1 / (x^1.01)  decaying past-0.2    1 / (x + 1)   \n",
+       "6          1           10    1 / (x^1.01)  decaying past-0.5    1 / (x + 1)   \n",
+       "9          1           10           1 / c      decaying past    1 / (x + 1)   \n",
+       "7          1           10           1 / c  decaying past-0.1    1 / (x + 1)   \n",
+       "1          1           10           1 / c  decaying past-0.2    1 / (x + 1)   \n",
+       "0          1           10           1 / c  decaying past-0.5    1 / (x + 1)   \n",
+       "10         1           10     1 / (x^0.5)      decaying past    1 / (x + 1)   \n",
+       "2          1           10     1 / (x^0.5)  decaying past-0.1    1 / (x + 1)   \n",
+       "5          1           10     1 / (x^0.5)  decaying past-0.2    1 / (x + 1)   \n",
+       "4          1           10     1 / (x^0.5)  decaying past-0.5    1 / (x + 1)   \n",
+       "\n",
+       "         mean   random_0   random_1   random_2   random_3  \n",
+       "11  123066.72  107134.89  100184.69  148414.86  136532.43  \n",
+       "3   110839.45   96141.55   92622.33  134327.77  120266.16  \n",
+       "8   111215.36   96431.58   92949.05  134625.43   120855.4  \n",
+       "6   113349.02    98236.3   94511.07  136772.66  123876.05  \n",
+       "9   128114.78  111494.88  102224.75  154495.88  144243.61  \n",
+       "7   120146.80  103720.59   99041.25  142517.35  135308.03  \n",
+       "1   120655.39  104187.64   99309.86  143233.36  135890.71  \n",
+       "0   122703.88  106107.26  100283.63   146199.7  138224.93  \n",
+       "10  126191.99  109889.25  101789.98  151996.01  141092.71  \n",
+       "2   114707.74   98998.93   96210.92  136923.09  126698.04  \n",
+       "5   115353.63   99593.39   96595.65  137697.77  127527.73  \n",
+       "4   118068.83  102118.82   98095.79   141090.8   130969.9  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiments_to_df(vital)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6541a9c1-8817-4822-bf17-90dc040f6d5c",
    "metadata": {},
    "outputs": [],
    "source": []
