--- a/code/notebooks/uno.ipynb
+++ b/code/notebooks/uno.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "id": "dc8b9cd3-10d2-4b50-991c-66e68cdb6217",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "id": "3080e8d1-e8d5-44d1-8e6f-cd9e36108572",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "id": "0b62e7ae-c41c-4edb-bbd8-2aff278b842d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "id": "4761f71a-0d06-4242-839d-39afe9a9cc7e",
    "metadata": {},
    "outputs": [
@@ -199,37 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "818e6443-9e29-42f0-a3dc-2038208c5d23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "c7332067-238e-4bbf-b05d-b46f17ac038e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise_experiments = experiments_43"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "id": "aaa99b19-4aa5-4dfe-be7c-611af502cab9",
    "metadata": {},
    "outputs": [],
    "source": [
     "needed_1 = {\n",
-    "    'random_seed': [103],\n",
+    "    # 'random_seed': [103],\n",
     "    'train_window': [10],\n",
     "    'key_a': [\"default\"],\n",
-    "    'key_w': [\"default\", \"simple_101\"]\n",
+    "    'key_w': [\"simple_101\"]\n",
     "}\n",
     "\n",
-    "interesting = extract_needed(noise_experiments, needed_1)"
+    "vital = extract_needed(noise_experiments, needed_1)"
    ]
   },
   {
@@ -250,7 +232,6 @@
     }
    ],
    "source": [
-    "vital = [interesting[1]]\n",
     "anls = [experiment.logs for experiment in vital]\n",
     "labels = [experiment.key_a + \" + \" + experiment.mixing_type + \" + \" + experiment.key_w for experiment in vital]\n",
     "colors = [None] * len(vital)\n",
