--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -78,7 +78,7 @@
     [S.\,M.~Kunin-Bogoiavlenskii] % short list of the authors (<= 3) for page headings, is necessary only if the full list does not fit the headings
 %S.M. Kunin-Bogoiavlenskii, A.V. Zukhba, and R.D. Zukhba
     {S.\,M.~Kunin-Bogoiavlenskii, A.\,V.~Zukhba, R.\,D.~Zukhba, and V.\,V.~V’yugin} % full list of the authors, presented in the table of contetns of the issue
-    [S.\,M.~Kunin-Bogoiavlenskii, A.\,V.~Zukhba] % list of the authors presented in the title page of the article, is necessary only if it differs from the full list of the authors in braces, i.e. '{' and '}'
+    [S.\,M.~Kunin-Bogoiavlenskii, A.\,V.~Zukhba, R.\,D.~Zukhba] % list of the authors presented in the title page of the article, is necessary only if it differs from the full list of the authors in braces, i.e. '{' and '}'
 \email
     {kunin-bogoiavlenskii.sm@phystech.edu; a\_\_l@mail.ru}
 %\thanks
@@ -400,7 +400,7 @@ We analyze the impact of various hyperparameters on the GMPP algorithm's perform
   \label{fig:n_20}
 \end{subfigure}
 
-\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different noise variance $\sigma^2$  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different noise variance $\sigma^2$  \\ (alpha function is defaut, weight function is default, window size = 10)\end{varwidth}}
 
 %\caption{Total losses for different noise variance $\sigma^2$}
 \label{fig:noises}
@@ -411,7 +411,7 @@ We analyze the impact of various hyperparameters on the GMPP algorithm's perform
 \begin{table}[H]
 \centering
 %\caption{Regret for different Mixing Update schemes and Noise}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Noise  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Noise Variance \\ (alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10)\end{varwidth}}
 \label{tab:alpha}
 
 \begin{tabular}{c|ccccc}
@@ -423,37 +423,24 @@ We analyze the impact of various hyperparameters on the GMPP algorithm's perform
 0.10 & 131348.25 & 114564.74 & 131578.01 & 115927.25 \\
 
 1 & 123066.72 & 110438.09 & 132268.30 & 110569.83 \\
-
 2 & 109753.81 & 105398.29 & 136043.26 & 103136.06 \\
-
 5 & 76132.46 & 92343.75 & 144554.62 & 83630.45 \\
-
 6 & 17155.14 & 89032.63 & 146382.86 & 25178.60 \\
-
 7 & -18273.00 & 29417.82 & 144827.02 & -9208.74 \\
-
 8 & -83796.21 & -13307.43 & 147510.57 & -55905.83 \\
-
 %9 & -1292481.14 & -66578.18 & 111455.10 & -79922.70 \\
-
 10 & -649917.41 & -120166.34 & 90089.56 & -377184.32 \\
-
 %11 & -677350.84 & -553834.55 & -4217467.46 & -4977614.29 \\
-
 12 & -828973.51 & -1123130.94 & -420588.94 & -1354731.42 \\
-
 %13 & -1297340.06 & -1127803.13 & -184977.56 & -1365609.14 \\
-
 %14 & -1529645.72 & -1265872.25 & -213233.53 & -1633244.28 \\
-
 15 & -1376777.17 & -1508510.73 & -1205600.59 & -1862352.43 \\
-
 20 & -8506756.45 & -9004436.41 & -8784588.25 & -9007978.86 \\
-
 50 & -12031878.44 & -14242897.85 & -4704221.50 & -14879230.26 \\
 \bottomrule
 \end{tabular}
 \end{table}
+
 
 \newpage
 
@@ -543,13 +530,13 @@ Weight Function & Decaying Past & Increasing Past & Start & Uniform Past \\
 $1 / ((x + 1)\ln^2(x + 1))$ & 122513.26 & 122383.91 & 175594.64 & 117175.93 \\
 $1 / c$ & 128114.78 & 117241.85 & 113998.26 & 119703.68 \\
 $1 / (x^{0.1})$ & 127435.12 & 115101.52 & 111276.08 & 117830.57 \\
-$1 / (x^{0.3})$ & 126769.51 & 112900.36 & 108946.40 & 115819.07 \\
-$1 / (x^{0.5})$ & 126191.99 & 111221.38 & 108630.68 & 114153.63 \\
-$1 / (x^{0.7})$ & 125352.96 & 109775.49 & 112027.20 & 112378.87 \\
-$1 / (x^{0.9})$ & 123969.39 & 109408.73 & 122832.21 & 110783.66 \\
-%$1 / x$ & 122965.58 & 110376.37 & 131907.11 & 110486.71 \\
-$1 / (x^{1.01})$ & 123066.72 & 110438.09 & 132268.30 & 110569.83 \\
-$1 / (x^{1.1})$ & 123963.12 & 111050.44 & 135253.09 & 111366.88 \\
+$1 / (x^{0.3})$ & 126769.51 & 112900.36 & \contour{black}{108946.40} & 115819.07 \\
+$1 / (x^{0.5})$ & 126191.99 & 111221.38 & \contour{black}{108630.68} & 114153.63 \\
+$1 / (x^{0.7})$ & 125352.96 & \contour{black}{109775.49} & 112027.20 & 112378.87 \\
+$1 / (x^{0.9})$ & 123969.39 & \contour{black}{109408.73} & 122832.21 & \contour{black}{110783.66} \\
+%$1 / x$ & 122965.58 & \contour{black}{110376.37} & 131907.11 & \contour{black}{110486.71} \\
+$1 / (x^{1.01})$ & 123066.72 & \contour{black}{110438.09} & 132268.30 & \contour{black}{110569.83} \\
+$1 / (x^{1.1})$ & 123963.12 & \contour{black}{111050.44} & 135253.09 & 111366.88 \\
 $1 / (x^{1.2})$ & 124846.17 & 111873.03 & 137976.99 & 112298.14 \\
 $1 / (x^2)$ & 133051.62 & 124473.63 & 148080.01 & 123449.14 \\
 $1 / ((x + 4) \ln(x + 4)\ln^2(\ln(x + 4)))$ & 121229.77 & 119413.95 & 169065.24 & 114823.76 \\
@@ -573,22 +560,22 @@ $1 / ((x + 4) \ln(x + 4)\ln^2(\ln(x + 4)))$ & 121229.77 & 119413.95 & 169065.24 
 \toprule
 {Alpha function} &
 \centering $\dfrac{1}{{(x+1)\ln^2(x+1)}}$ &
-\centering $\dfrac{1}{t^{1.01}}$ &
-\centering $\dfrac{1}{t^{0.5}}$ &
+\centering $\dfrac{1}{x^{1.01}}$ &
+\centering $\dfrac{1}{x^{0.5}}$ &
 \centering $\dfrac{1}{c}$ 
 \tabularnewline
 \midrule
-$1 / (x + 1)$ & 175594.64 & 132268.30 & 108630.68 & 113998.26 \\
-$1 / (x + 1)^{0.5}$ & 245494.10 & 207099.32 & 164079.31 & 141554.07 \\
-$1 / (x + 1)^{1.5}$ & 130339.21 & 125699.71 & 130185.66 & 131329.66 \\
-$1 / (x + 1)^2$ & 136029.09 & 134929.54 & 133876.06 & 132709.43 \\
-$1 / e^{x/3}$ & 136413.87 & 135409.06 & 134012.15 & 132760.88 \\
-$1 / (x + 10)$ & 175411.17 & 132208.09 & 108638.55 & 114051.47 \\
-$1 / (x + 100)$ & 173760.98 & 131623.56 & 108732.56 & 114568.90 \\
-$1 / (x + 1000)$ & 162129.20 & 127165.47 & 110389.16 & 118512.52 \\
+$1 / (t + 1)$ & 175594.64 & 132268.30 & \contour{black}{108630.68} & 113998.26 \\
+$1 / (t + 1)^{0.5}$ & 245494.10 & 207099.32 & 164079.31 & 141554.07 \\
+$1 / (t + 1)^{1.5}$ & 130339.21 & 125699.71 & 130185.66 & 131329.66 \\
+$1 / (t + 1)^2$ & 136029.09 & 134929.54 & 133876.06 & 132709.43 \\
+$1 / e^{t/3}$ & 136413.87 & 135409.06 & 134012.15 & 132760.88 \\
+$1 / (t + 10)$ & 175411.17 & 132208.09 & \contour{black}{108638.55} & 114051.47 \\
+$1 / (t + 100)$ & 173760.98 & 131623.56 & \contour{black}{108732.56} & 114568.90 \\
+$1 / (t + 1000)$ & 162129.20 & 127165.47 & \contour{black}{110389.16} & 118512.52 \\
 $1 / 100$ & 220008.81 & 163117.40 & 129035.87 & 117521.60 \\
-$1 / 500$ & 198094.83 & 141385.79 & 111706.58 & 108969.41 \\
-$1 / 1000$ & 184324.73 & 135612.25 & 109449.15 & 111709.95 \\
+$1 / 500$ & 198094.83 & 141385.79 & 111706.58 & \contour{black}{108969.41} \\
+$1 / 1000$ & 184324.73 & 135612.25 & \contour{black}{109449.15} & 111709.95 \\
 $1 / 5000$ & 147561.46 & 121905.50 & 115147.43 & 123741.66 \\
 $1 / 10000$ & 136414.42 & 119357.81 & 120634.74 & 127510.93 \\
 $1 / 50000$ & 130783.65 & 125141.06 & 129963.25 & 131542.49 \\
@@ -597,7 +584,7 @@ $1 / 50000$ & 130783.65 & 125141.06 & 129963.25 & 131542.49 \\
 \end{table}
 
 
-\subsection{Gamma parameter in  Increasing Past Mixing Update}
+\subsection{Gamma parameter in Increasing Past Share Mixing Update}
 
 \begin{table}[h]
 \centering
@@ -610,16 +597,16 @@ $1 / 50000$ & 130783.65 & 125141.06 & 129963.25 & 131542.49 \\
 \toprule
 {$\gamma$} &
 \centering $\dfrac{1}{{(x+1)\ln^2(x+1)}}$ &
-\centering $\dfrac{1}{t^{1.01}}$ &
-\centering $\dfrac{1}{t^{0.5}}$ &
+\centering $\dfrac{1}{x^{1.01}}$ &
+\centering $\dfrac{1}{x^{0.5}}$ &
 \centering $\dfrac{1}{c}$ 
 \tabularnewline
 \midrule
 
-$0.5$& 119783.90 & 112279.88 & 118155.78 & 110151.26 \\
-$1$ & 122383.91 & 111221.38 & 117241.85 & 110438.09 \\
-$2$& 126865.67 & 110089.54 & 116216.44 & 111563.64 \\
-$4$ & 133447.69 & 109160.56 & 115299.68 & 113922.30 \\
+$0.5$& 119783.90 & 112279.88 & 118155.78 & \contour{black}{110151.26} \\
+$1$ & 122383.91 & 111221.38 & 117241.85 & \contour{black}{110438.09} \\
+$2$& 126865.67 & \contour{black}{110089.54} & 116216.44 & 111563.64 \\
+$4$ & 133447.69 & \contour{black}{109160.56} & 115299.68 & 113922.30 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -643,11 +630,11 @@ $4$ & 133447.69 & 109160.56 & 115299.68 & 113922.30 \\
 \caption{\begin{varwidth}[t]{\linewidth}\centering Mean values with different Mixing Update schemes and Weight and Alpha functions  \\($\sigma^2 =1$, window size = 10)\end{varwidth}}
 \label{tab:mean_values}
 
-\begin{tabular}{c|ccc|ccc|ccc|cccc}
+\begin{tabular}{c|ccc|ccc|ccc|ccc}
 \toprule
 Mixing scheme & \multicolumn{3}{c|}{start} & \multicolumn{3}{c|}{increasing past} & \multicolumn{3}{c|}{uniform past} & \multicolumn{3}{c}{decaying past} \\
 \midrule
-\backslashbox{$\alpha_i$}{$w_1^i$} &
+\backslashbox{$\alpha_t$}{$w_1^x$} &
 $\dfrac{1}{x^{1.1}}$ &
 $\dfrac{1}{x^{0.5}}$ &
 $\dfrac{1}{c}$ &
@@ -661,24 +648,24 @@ $\dfrac{1}{x^{1.1}}$ &
 $\dfrac{1}{x^{0.5}}$ &
 $\dfrac{1}{c}$ \\
 \midrule
-
-$1 / (t + 1)^{1.5}$ & 125699 & 130185 & 131329 & 131002 & 131849 & 131691 & 132418 & 132462 & 131940 & 134772 & 133653 & 132550 \\
-$1 / (t + 1)^2$ & 134929 & 133876 & 132709 & 135243 & 133935 & 132721 & 135301 & 133958 & 132731 & 135387 & 133999 & 132753 \\
-$1 / \ln(t + 1)$ & 418163 & 340332 & 309671 & 400131 & 337777 & 312108 & 390906 & 333528 & 309569 & 283210 & 252792 & 236401 \\
-$1 / e^{t/3}$ & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 \\
-$1 / (t + 10)$ & 132208 & \contour{black}{108638} & 114051 & 110259 & 111266 & 117298 & 110521 & 114212 & 119758 & 123137 & 126238 & 128145 \\
-$1 / (t + 100)$ & 131623 & \contour{black}{108732} & 114568 & \contour{black}{109743} & 111718 & 117835 & 110604 & 114760 & 120269 & 123716 & 126653 & 128428 \\
-$1 / (t + 1000)$ & 127165 & 110389 & 118512 & 110754 & 115361 & 121521 & 113447 & 118679 & 123629 & 127161 & 129057 & 129996 \\
-$1 / 100$ & 163117 & 129035 & 117521 & 129873 & 125704 & 120981 & 126579 & 125443 & 122193 & 116458 & 119146 & 121009 \\
-$1 / 500$ & 141385 & 111706 & \contour{black}{108969} & 112133 & 110618 & 112210 & 110553 & 111701 & 114376 & 115819 & 120327 & 124078 \\
-$1 / 1000$ & 135612 & \contour{black}{109449} & 111709 & \contour{black}{109844} & 110794 & 115281 & \contour{black}{109804} & 113087 & 117809 & 120757 & 124499 & 127207 \\
-$1 / 5000$ & 121905 & 115147 & 123741 & 115333 & 121026 & 125928 & 119177 & 123913 & 127377 & 130666 & 131268 & 131337 \\
-$1 / 10000$ & 119357 & 120634 & 127510 & 121016 & 125808 & 128881 & 124693 & 127919 & 129766 & 132825 & 132555 & 132022 \\
-$1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131894 & 131885 & 132477 & 132530 & 132100 & 134850 & 133704 & 132608 \\
+$1 / (t + 1)$ & 132268 &  \contour{black}{108631} & 113998 & \contour{black}{110438} & 111221 & 117242 & \contour{black}{110570} & 114154 & 119704 & 123067 & 126192 & 128115 \\
+$1 / (t + 1)^{0.5}$ & 207099 & 164079 & 141554 & 183749 & 160168 & 145260 & 175611 & 157818 & 146286 & 136055 & 132880 & 131509 \\
+$1 / (t + 1)^{1.5}$ & 125700 & 130186 & 131330 & 131002 & 131850 & 131691 & 132418 & 132463 & 131940 & 134773 & 133653 & 132551 \\
+$1 / (t + 1)^2$ & 134930 & 133876 & 132709 & 135243 & 133936 & 132722 & 135301 & 133958 & 132731 & 135387 & 134000 & 132753 \\
+$1 / \ln(t + 1)$ & 418163 & 340332 & 309672 & 400131 & 337777 & 312109 & 390906 & 333528 & 309570 & 283210 & 252793 & 236402 \\
+$1 / e^{t/3}$ & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 \\
+$1 / (t + 10)$ & 132208 & \contour{black}{108639} & 114051 & \contour{black}{110259 }& 111266 & 117299 & \contour{black}{110521} & 114212 & 119758 & 123137 & 126238 & 128146 \\
+$1 / (t + 100)$ & 131624 &  \contour{black}{108733} & 114569 &  \contour{black}{109744}& 111719 & 117835 & \contour{black}{110604} & 114760 & 120269 & 123716 & 126653 & 128429 \\
+$1 / (t + 1000)$ & 127165 & \contour{black}{110389} & 118513 & \contour{black}{110754} & 115362 & 121522 & 113448 & 118679 & 123630 & 127161 & 129057 & 129996 \\
+$1 / 100$ & 163117 & 129036 & 117522 & 129874 & 125704 & 120981 & 126580 & 125444 & 122194 & 116459 & 119147 & 121009 \\
+$1 / 500$ & 141386 & 111707 &  \contour{black}{108969} & 112134 & \contour{black}{110618} & 112210 & \contour{black}{110553 }& 111701 & 114377 & 115820 & 120327 & 124078 \\
+$1 / 1000$ & 135612 &  \contour{black}{109449} & 111710 &  \contour{black}{109844} & \contour{black}{110794} & 115281 &  \contour{black}{109805} & 113087 & 117809 & 120758 & 124500 & 127208 \\
+$1 / 5000$ & 121906 & 115147 & 123742 & 115334 & 121027 & 125928 & 119177 & 123913 & 127377 & 130666 & 131268 & 131337 \\
+$1 / 10000$ & 119358 & 120635 & 127511 & 121016 & 125808 & 128881 & 124694 & 127919 & 129766 & 132826 & 132555 & 132022 \\
+$1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131895 & 131885 & 132478 & 132531 & 132100 & 134851 & 133705 & 132609 \\
 \bottomrule
 \end{tabular}
 \end{sidewaystable}
-
 
 
 %
